added cdl/ebi check

--- a/registry_url.yaml
+++ b/registry_url.yaml
@@ -1,4 +1,5 @@
-{[
+# Registery URL
+[
     'https://scicrunch.org/resolver/', 
     'http://prefix.cc/',
     'http://datahub.io/dataset/',
@@ -6,4 +7,4 @@
     'http://lov.okfn.org/dataset/lov/vocabs/',
     'http://purl.bioontology.org/ontology/',
     'http://www.ontobee.org/browser/index.php?o='
-]}
+]
