--- a/gocprefix.yaml
+++ b/gocprefix.yaml
@@ -1,4 +1,4 @@
-['# 2017-08-01 14:14:26', AgBase, AGI_LocusCode, AGRICOLA_ID, AGRICOLA_IND, Alzheimers_University_of_Toronto,
+['# 2017-09-01 10:37:15', AgBase, AGI_LocusCode, AGRICOLA_ID, AGRICOLA_IND, Alzheimers_University_of_Toronto,
   ApiDB_PlasmoDB, APSNET, APweb, AraCyc, ARUK-UCL, ASAP, AspGD, AspGD_LOCUS, AspGD_REF,
   BFO, BHF-UCL, BioCyc, BIOMD, bioPIXIE_MEFIT, BIOSIS, BRENDA, Broad, Broad_MGG, Broad_NEUROSPORA,
   CACAO, CAFA, CAS, CASGEN, CASREF, CASSPC, CAZY, CBS, CDD, CGD, CGD_LOCUS, CGD_REF,
@@ -11,19 +11,19 @@
   Genesys-pgr, GenProtEC, GEO, GermOnline, GO, GO_Central, GO_Noctua, GO_REF, GOC,
   GOC-OWL, GONUTS, GOREL, GR, GR_GENE, GR_MUT, GR_PROTEIN, GR_QTL, GR_REF, GRIMS,
   GRIN, GRINDesc, H-invDB, H-invDB_cDNA, H-invDB_locus, HAMAP, HGNC, HGNC_gene, HPA,
-  HPA_antibody, HUGO, IMG, IMGT_HLA, IMGT_LIGM, IntAct, InterPro, IPI, IRIC, IRGC,
-  ISBN, ISRR, ISSN, IUPHAR, IUPHAR_GPCR, IUPHAR_RECEPTOR, Jaiswal_Lab, JCVI, JCVI_CMR,
-  JCVI_EGAD, JCVI_GenProp, JCVI_Medtr, JCVI_REF, JCVI_TIGRFAMS, JSTOR, KEGG, KEGG_ENZYME,
-  KEGG_LIGAND, KEGG_PATHWAY, KEGG_REACTION, LIFEdb, LIS, LOCSVMpsi, MA, MACSC_REF,
-  MaizeGDB, MaizeGDB_Locus, MaizeGDB_QTL, MaizeGDB_REF, MaizeGDB_stock, MEDLINE, MENGO,
-  MEROPS, MEROPS_fam, MeSH, MetaCyc, MGCSC_GENETIC_STOCKS, MGD, MGI, MIPS_funcat,
-  MITRE, MO, ModBase, MTBBASE, MultiFun, NASC_code, NC-IUBMB, NCBI, NCBI_Gene, NCBI_gi,
-  NCBI_GP, NCBI_locus_tag, NIF_Subcellular, NMPDR, NTNU_SB, OBI, OBO_REL, OBO_SF_PO,
-  OBO_SF2_PO, OMIM, OMSSA, PAINT_REF, PAMGO, PAMGO_GAT, PAMGO_MGG, PAMGO_VMD, PANTHER,
-  ParkinsonsUK-UCL, PATO, PATRIC, PDB, Pfam, PfamB, PharmGKB, PhenoScape, PHI, PINC,
-  PIR, PIRSF, Planteome_gene, PlantSystematics_image_archive, PMCID, PMID, PO, PO_GIT,
-  PO_REF, POC, PomBase, Pompep, PPI, PR, PRINTS, ProDom, Prosite, protein_id, PROW,
-  PseudoCAP, PSO_GIT, PSI-MI, PSI-MOD, PSORT, pTARGET, PubChem_BioAssay, PubChem_Compound,
+  HPA_antibody, HUGO, IMG, IMGT_HLA, IMGT_LIGM, IntAct, InterPro, IPI, iPTMnet, IRIC,
+  IRGC, ISBN, ISRR, ISSN, IUPHAR, IUPHAR_GPCR, IUPHAR_RECEPTOR, Jaiswal_Lab, JCVI,
+  JCVI_CMR, JCVI_EGAD, JCVI_GenProp, JCVI_Medtr, JCVI_REF, JCVI_TIGRFAMS, JSTOR, KEGG,
+  KEGG_ENZYME, KEGG_LIGAND, KEGG_PATHWAY, KEGG_REACTION, LIFEdb, LIS, LOCSVMpsi, MA,
+  MACSC_REF, MaizeGDB, MaizeGDB_Locus, MaizeGDB_QTL, MaizeGDB_REF, MaizeGDB_stock,
+  MEDLINE, MENGO, MEROPS, MEROPS_fam, MeSH, MetaCyc, MGCSC_GENETIC_STOCKS, MGD, MGI,
+  MIPS_funcat, MITRE, MO, ModBase, MTBBASE, MultiFun, NASC_code, NC-IUBMB, NCBI, NCBI_Gene,
+  NCBI_gi, NCBI_GP, NCBI_locus_tag, NIF_Subcellular, NMPDR, NTNU_SB, OBI, OBO_REL,
+  OBO_SF_PO, OBO_SF2_PO, OMIM, OMSSA, PAINT_REF, PAMGO, PAMGO_GAT, PAMGO_MGG, PAMGO_VMD,
+  PANTHER, ParkinsonsUK-UCL, PATO, PATRIC, PDB, Pfam, PfamB, PharmGKB, PhenoScape,
+  PHI, PINC, PIR, PIRSF, Planteome_gene, PlantSystematics_image_archive, PMCID, PMID,
+  PO, PO_GIT, PO_REF, POC, PomBase, Pompep, PPI, PR, PRINTS, ProDom, Prosite, protein_id,
+  PROW, PseudoCAP, PSO_GIT, PSI-MI, PSI-MOD, PSORT, pTARGET, PubChem_BioAssay, PubChem_Compound,
   PubChem_Substance, RAP-DB, Reactome, REBASE, RefGenome, RefSeq, RESID, Rfam, RGD,
   RHEA, RiceSES, RNAcentral, RNAmods, RO, Roslin_Institute, SABIO-RK, Sanger, SEED,
   SFLD, SGD, SGD_LOCUS, SGD_REF, SGN, SGN_ref, SGN_germplasm, SMART, SMD, SO, Soy_gene,
