--- a/prefixping.ini
+++ b/prefixping.ini
@@ -1,10 +1,12 @@
 [uwsgi]
-module = wsgi
+module = prefixping
 
 master = true
 processes = 5
 
+plugins = python3
 socket = prefixping.sock
+callable = app
 chmod-socket = 660
 vacuum = true
 
