move socket to /tmp ; try to head off perm probs

--- a/prefixping.ini
+++ b/prefixping.ini
@@ -5,7 +5,7 @@ master = true
 processes = 5
 
 plugins = python3
-socket = prefixping.sock
+socket = /tmp/prefixping.sock
 callable = app
 chmod-socket = 660
 vacuum = true
