try moving the socket back

--- a/prefixping.ini
+++ b/prefixping.ini
@@ -1,11 +1,11 @@
 [uwsgi]
-module = prefixping
+module = prefixping:app
 
 master = true
 processes = 5
 
 plugins = python3
-socket = /tmp/prefixping.sock
+socket = prefixping.sock
 callable = app
 chmod-socket = 660
 vacuum = true
