explicit virt env path?

--- a/prefixping.ini
+++ b/prefixping.ini
@@ -2,9 +2,10 @@
 module = prefixping:app
 
 master = true
-processes = 5
+processes = 3
 
 plugins = python3
+virtualenv = /srv/PrefixCommons/PrefixPing/prefixping
 socket = /srv/PrefixCommons/PrefixPing/prefixping.sock
 callable = app
 chmod-socket = 660
