more permissive socket to /tmp; try local stats server

--- a/prefixping.ini
+++ b/prefixping.ini
@@ -6,9 +6,10 @@ processes = 3
 
 plugins = python3
 virtualenv = /srv/PrefixCommons/PrefixPing/prefixping
-socket = /srv/PrefixCommons/PrefixPing/prefixping.sock
+#socket = /srv/PrefixCommons/PrefixPing/prefixping.sock
+socket = /tmp/prefixping.sock
 callable = app
-chmod-socket = 660
+chmod-socket = 666
 vacuum = true
 
 die-on-term = true
