--- a/prefixping.conf
+++ b/prefixping.conf
@@ -10,4 +10,5 @@ setgid www-data
 
 env PATH=/srv/PrefixCommons/PrefixPing/
 chdir /srv/PrefixCommons/PrefixPing/
-exec uwsgi --ini prefixping.ini
+exec ./prefixping/bin/uwsgi --ini prefixping.ini --stats 127.0.0.1:9191
+# -s /tmp/prefixping.sock
