try adderssing cold start timeout

--- a/prefixping.ini
+++ b/prefixping.ini
@@ -6,10 +6,11 @@ processes = 3
 
 plugins = python3
 virtualenv = /srv/PrefixCommons/PrefixPing/prefixping
-#socket = /srv/PrefixCommons/PrefixPing/prefixping.sock
-socket = /tmp/prefixping.sock
+socket = /tmp/prefixping.sock  
+# socket = /run/prefixping.sock  # todo switch to this throughout
+chmod-socket = 664
+#http-socket = 0.0.0.0:5000
 callable = app
-chmod-socket = 666
 vacuum = true
 
-die-on-term = true
+die-on-idle = False
