sock from /tmp to /run

--- a/prefixping.ini
+++ b/prefixping.ini
@@ -2,13 +2,12 @@
 module = prefixping:app
 
 master = true
-processes = 3
+processes = 4
 
 plugins = python3
 virtualenv = /srv/PrefixCommons/PrefixPing/prefixping
-socket = /tmp/prefixping.sock  
-# socket = /run/prefixping.sock  # todo switch to this throughout
-chmod-socket = 664
+socket = /run/prefixping.sock  
+chmod-socket = 660
 #http-socket = 0.0.0.0:5000
 callable = app
 vacuum = true
