mv sock back to /tmp

--- a/prefixping.conf
+++ b/prefixping.conf
@@ -11,4 +11,4 @@ setgid www-data
 env PATH=/srv/PrefixCommons/PrefixPing/
 chdir /srv/PrefixCommons/PrefixPing/
 exec ./prefixping/bin/uwsgi --ini prefixping.ini --stats 127.0.0.1:9191
-# -s /run/prefixping.sock
+# -s /tmp/prefixping.sock
