--- a/prefixping.ini
+++ b/prefixping.ini
@@ -6,7 +6,7 @@ processes = 4
 
 plugins = python3
 virtualenv = /srv/PrefixCommons/PrefixPing/prefixping
-socket = /run/prefixping.sock  
+socket = /tmp/prefixping.sock  
 chmod-socket = 660
 #http-socket = 0.0.0.0:5000
 callable = app
