working on centos - network slow

--- a/prefixping.ini
+++ b/prefixping.ini
@@ -1,15 +1,34 @@
 [uwsgi]
 module = prefixping:app
 
+# I detect no apparent effect wuth these settings
+uid = nginx
+gid = nginx
+listen.owner = nginx
+listen.group = nginx 
+
+# under SELinux ... thing to try
+#### add uwsgi user to nginx group
+# usermod -a -G nginx uwsgi
+#### make group for directory /run/prefixping be nginx
+# mkdir /run/prefixping
+# chown tomc:nginx /run/prefixping
+### sticky too? 
+# chmod g+s /run/prefixping
+
+ 
+socket = /run/prefixping/uwsgi_nginx.sock
+chmod-socket = 666
+
+#http-socket = 0.0.0.0:5000
+
 master = true
 processes = 4
 
 plugins = python3
 virtualenv = /srv/PrefixCommons/PrefixPing/prefixping
-socket = /tmp/prefixping.sock  
-chmod-socket = 660
-#http-socket = 0.0.0.0:5000
+
 callable = app
 vacuum = true
 
-idle = true
+#idle = true
