more doc: target ubuntu

--- a/prefixping.ini
+++ b/prefixping.ini
@@ -1,24 +1,20 @@
 [uwsgi]
 module = prefixping:app
 
-# I detect no apparent effect wuth these settings
-uid = nginx
-gid = nginx
-listen.owner = nginx
-listen.group = nginx 
+# redhat/centos
+#uid = nginx
+#gid = nginx
+#listen.owner = nginx
+#listen.group = nginx
 
-# under SELinux ... thing to try
-#### add uwsgi user to nginx group
-# usermod -a -G nginx uwsgi
-#### make group for directory /run/prefixping be nginx
-# mkdir /run/prefixping
-# chown tomc:nginx /run/prefixping
-### sticky too? 
-# chmod g+s /run/prefixping
+# debian/ubuntu
+uid = www-data
+gid = www-data
+listen.owner = www-data
+listen.group = www-data
 
- 
 socket = /run/prefixping/uwsgi_nginx.sock
-chmod-socket = 666
+#chmod-socket = 666
 
 #http-socket = 0.0.0.0:5000
 
